--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/topicusonderwijs/iota/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/topicusonderwijs/iota/zipball/master" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/topicusonderwijs/iota" class="code">View Iota on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
@@ -49,7 +47,7 @@
 <li>Download en installeer de laatste Arduino IDE (nu 1.6.9) voor jouw OS uit deze directory:
 
 <ul>
-<li> <a href="https://drive.google.com/folderview?id=0BySKoKNET9qkZlQxTGVXdlo1b0k">installs@Google Drive</a>{:target="_blank"}</li>
+<li> <a href="https://drive.google.com/folderview?id=0BySKoKNET9qkZlQxTGVXdlo1b0k" target="_blank">installs@Google Drive</a></li>
 </ul>
 </li>
 <li>Installeer de driver voor de USB-chip van het ESP8266 bordje (alleen nodig voor Mac en Windows). Deze staan in dezelfde directory als de Arduino IDE.</li>
@@ -62,13 +60,13 @@
 
 <ul>
 <li>
-<a href="https://drive.google.com/folderview?id=0B8pTpNZu7QutWDUyU2FjX2xZT2M">libraries@Google Drive</a>{:target="_blank"}</li>
+<a href="https://drive.google.com/folderview?id=0B8pTpNZu7QutWDUyU2FjX2xZT2M" target="_blank">libraries@Google Drive</a>{:target="_blank"}</li>
 </ul>
 </li>
 <li>We hebben een testsketch gemaakt, download deze hier:
 
 <ul>
-<li> <a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutcUxvRGRIRVBrdFU">iota-workshop.zip</a>{:target="_blank"}</li>
+<li> <a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutcUxvRGRIRVBrdFU" target="_blank">iota-workshop.zip</a>{:target="_blank"}</li>
 </ul>
 </li>
 <li> Pak de ZIP-file uit en open het <code>iota-workshop.ino</code> bestand met de Arduino IDE.</li>
