--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
 <ul>
 <li>
-<a href="https://drive.google.com/folderview?id=0B8pTpNZu7QutWDUyU2FjX2xZT2M" target="_blank">libraries@Google Drive</a>{:target="_blank"}</li>
+<a href="https://drive.google.com/folderview?id=0B8pTpNZu7QutWDUyU2FjX2xZT2M" target="_blank">libraries@Google Drive</a></li>
 </ul>
 </li>
 <li>We hebben een testsketch gemaakt, download deze hier:
 
 <ul>
-<li> <a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutcUxvRGRIRVBrdFU" target="_blank">iota-workshop.zip</a>{:target="_blank"}</li>
+<li> <a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutcUxvRGRIRVBrdFU" target="_blank">iota-workshop.zip</a></li>
 </ul>
 </li>
 <li> Pak de ZIP-file uit en open het <code>iota-workshop.ino</code> bestand met de Arduino IDE.</li>
