--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <meta name="description" content="Repo voor IoT workshop Topiconf 2016">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
+  <style>
+    code {
+      background-color: lightyellow !important;
+    }
+  </style>
 </head>
 
 <body>
