--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
     code {
-      background-color: lightyellow !important;
+      background-color: lightblue !important;
     }
   </style>
 </head>
