--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1 class="title">Iota</h1>
     </header>
     <div id="container">
-      <p class="tagline">Repo voor IoT workshop Topiconf 2016</p>
+      <p class="tagline">IoT workshop Topiconf 2016</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
@@ -43,7 +43,7 @@
 
 <p>Volg deze handleiding om snel wat leuks met je iota bordje te kunnen ontwikkelen! </p>
 
-<p><strong>Voor de workshop</strong></p>
+<p><strong>Voorbereiding</strong></p>
 
 <p>Installeer de volgende software <strong>voordat de workshop begint</strong>:</p>
 
@@ -75,12 +75,11 @@
 </li>
 <li> Pak de ZIP-file uit en open het <code>iota-workshop.ino</code> bestand met de Arduino IDE.</li>
 <li>Compile de sketch via <code>Sketch</code>, <code>Verify/Compile</code>. Dit zou nu moeten lukken!</li>
-<li>Tot op de workshop!</li>
 </ul>
 
-<p><strong>Tijdens de workshop</strong></p>
+<p><strong>IoTa aansluiten</strong></p>
 
-<p>Als je eenmaal in het bezit bent van een iota bordje sluit je deze via USB aan. Selecteer vervolgens onder <code>Tools</code> de volgende opties (vanaf <code>Board</code>):</p>
+<p>Als je eenmaal in het bezit bent van een IoTa bordje sluit je deze via USB aan. Selecteer vervolgens onder <code>Tools</code> de volgende opties (vanaf <code>Board</code>):</p>
 
 <p><img src="https://raw.githubusercontent.com/topicusonderwijs/iota/master/assets/settings-tools.png" alt="Settings"></p>
 
@@ -88,7 +87,8 @@
 
 <p>Vervolgens kun je via <code>Sketch</code>, <code>Upload</code> je code in de ESP8266 laden. </p>
 
-<p>De testsketch verbindt met wifi en toont initieel de waarde van de twee sensoren. Met de knop je kun je het volgende:</p>
+<p>De testsketch verbindt met wifi en toont initieel de waarde van de twee sensoren (via de <code>serial monitor</code>, icoontje rechtsboven in de Arduino IDE).
+Met de knop je kun je het volgende:</p>
 
 <ul>
 <li>1x klikken: led aan/uit</li>
