--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
 <li>Ga naar <code>Tools</code>, <code>Board: ..</code>, <code>Boards Manager</code> en zoek hier op 'esp8266'. Installeer de laatste versie (2.2.0).</li>
 <li>Selecteer onder <code>Tools</code>, <code>Board</code>, <code>WeMoS D1 R2 &amp; mini</code>
 </li>
-<li>Nu heb je een aantal libraries nodig. Download de <strong>3</strong> ZIP-files uit de directory en voeg deze toe aan de Arduino IDE via <code>Sketch</code>, <code>Include library</code>, <code>Add .ZIP Library</code>. 
+<li>Nu heb je een aantal libraries nodig. Download de volgende <strong>3</strong> ZIP-files en voeg deze toe aan de Arduino IDE via <code>Sketch</code>, <code>Include library</code>, <code>Add .ZIP Library</code>. 
 
 <ul>
-<li>
-<a href="https://drive.google.com/folderview?id=0B8pTpNZu7QutWDUyU2FjX2xZT2M" target="_blank">libraries@Google Drive</a></li>
+<li><a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutR0VBdUtuRzNwUmc" target="_blank">FastLED</a></li>
+<li><a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutMVRBYkVvZzJTV0E" target="_blank">LM75</a></li>
+<li><a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutRjY4YUQ5UmN2U1E" target="_blank">OneButton</a></li>
 </ul>
 </li>
 <li>We hebben een testsketch gemaakt, download deze hier:
