--- a/index.html
+++ b/index.html
@@ -99,9 +99,22 @@ Met de knop je kun je het volgende:</p>
 
 <p>Succes!</p>
 
-<p><strong>Tips</strong></p>
+<p><strong>Toepassingen</strong></p>
 
-<p>In de Arduino IDE vind je onder <code>File</code>, <code>Examples</code> meer voorbeelden van de gebruikte libraries. O.a. <code>ESP8266HTTPClient</code> is handig om simpele HTTP requests te doen.</p>
+<ul>
+
+<li>In de Arduino IDE vind je onder <code>File</code>, <code>Examples</code> meer voorbeelden van de gebruikte libraries. O.a. <code>ESP8266HTTPClient</code> is handig om simpele HTTP requests te doen. <b>Let op:</b> er momenteel issues zijn met requests via https. Gebruik http indien mogelijk.</li>
+
+<li><a href="https://thingspeak.com/" target="_blank">ThingSpeak</a> biedt een platform om allerlei sensorgegevens te verzamelen en in te zien.</li>
+
+<li><a href="https://ifttt.com" target="_blank">IFTTT</a> (If This Then That) is een handige clouddienst die verschillende andere clouddiensten (Twitter, Dropbox, Philips Hue etc.) met elkaar kan verbinden. Via het Maker channel kun je hier ook je IoTa bordje mee koppelen. Zie <a href="https://github.com/topicusonderwijs/iota/tree/master/software/arduino/iota-ifttt">deze sketch</a> voor een voorbeeld.</li>
+
+<li>Nog meer voorbeeldsketches vind je <a href="https://github.com/topicusonderwijs/iota/tree/master/software/arduino/" target="_blank">hier</a> in de IoTa repo.</li>
+
+
+</ul>
+
+
         </article>
       </div>
     </div>
