Update workshop sketch link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <li>Download en installeer de laatste Arduino IDE (nu 1.6.9) voor jouw OS uit deze directory:
 
 <ul>
-<li> <a href="https://drive.google.com/folderview?id=0B8pTpNZu7Qutcy1oOHNDcG1Ja3c" target="_blank">installs@Google Drive</a></li>
+<li> <a href="https://drive.google.com/folderview?id=0BySKoKNET9qkZlQxTGVXdlo1b0k" target="_blank">installs@Google Drive</a></li>
 </ul>
 </li>
 <li>Installeer de driver voor de USB-chip van het ESP8266 bordje (alleen nodig voor Mac en Windows). Deze staan in dezelfde directory als de Arduino IDE.</li>
@@ -88,8 +88,9 @@
 
 <p>Vervolgens kun je via <code>Sketch</code>, <code>Upload</code> je code in de ESP8266 laden. </p>
 
-<p>De testsketch verbindt met wifi en toont initieel de waarde van de twee sensoren (via de <code>serial monitor</code>, icoontje rechtsboven in de Arduino IDE).
-Met de knop je kun je het volgende:</p>
+<p>De testsketch verbindt met wifi en toont initieel de waarde van de twee sensoren via de <code>serial monitor</code>. Deze kun je openen via het icoontje rechtsboven in de Arduino IDE. Selecteer in dit nieuwe venster rechtsonder <code>115200 baud</code>.</p>
+
+<p>Met de knop je kun je het volgende:</p>
 
 <ul>
 <li>1x klikken: led aan/uit</li>
