--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <li> <a href="https://drive.google.com/folderview?id=0B8pTpNZu7Qutcy1oOHNDcG1Ja3c" target="_blank">installs@Google Drive</a></li>
 </ul>
 </li>
-<li>Installeer de driver voor de USB-chip van het ESP8266 bordje (alleen nodig voor Mac en Windows). Deze staan in dezelfde directory als de Arduino IDE.</li>
+<li>Installeer de driver voor de USB-chip van het ESP8266 bordje (alleen nodig voor Mac en Windows). Deze staan in dezelfde directory als de Arduino IDE. Vergeet niet te rebooten als hier om gevraagd wordt.</li>
 <li>Start de Arduino IDE en ga <code>Arduino</code>, <code>Preferences</code> en vul bij <code>Additional Boards Manager URLs</code> dit in: <code>http://arduino.esp8266.com/stable/package_esp8266com_index.json</code>
 </li>
 <li>Ga naar <code>Tools</code>, <code>Board: ..</code>, <code>Boards Manager</code> en zoek hier op 'esp8266'. Installeer de laatste versie (2.2.0).</li>
