--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </ul>
 </li>
 <li>Installeer de driver voor de USB-chip van het ESP8266 bordje (alleen nodig voor Mac en Windows). Deze staan in dezelfde directory als de Arduino IDE. Vergeet niet te rebooten als hier om gevraagd wordt.</li>
-<li>Start de Arduino IDE en ga <code>Arduino</code>, <code>Preferences</code> en vul bij <code>Additional Boards Manager URLs</code> dit in: <code>http://arduino.esp8266.com/stable/package_esp8266com_index.json</code>
+<li>Start de Arduino IDE en ga naar <code>Arduino</code>, <code>Preferences</code> en vul bij <code>Additional Boards Manager URLs</code> dit in: <code>http://arduino.esp8266.com/stable/package_esp8266com_index.json</code>
 </li>
 <li>Ga naar <code>Tools</code>, <code>Board: ..</code>, <code>Boards Manager</code> en zoek hier op 'esp8266'. Installeer de laatste versie (2.2.0).</li>
 <li>Selecteer onder <code>Tools</code>, <code>Board</code>, <code>WeMoS D1 R2 &amp; mini</code>
