--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
 
 <p>Succes!</p>
 
+<p><strong>Documentatie</strong></p>
+
+<ul>
+
+<li><a href="https://www.arduino.cc/en/Reference" target="_blank">Arduino Language Reference</a></li>
+  
+<li><a href="https://github.com/esp8266/arduino" target="_blank">https://github.com/esp8266/arduino</a></li>
+
+</ul>
+
 <p><strong>Toepassingen</strong></p>
 
 <ul>
