--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <li><a href="https://www.arduino.cc/en/Reference" target="_blank">Arduino Language Reference</a></li>
   
-<li><a href="https://github.com/esp8266/arduino" target="_blank">https://github.com/esp8266/arduino</a></li>
+<li><a href="https://github.com/esp8266/arduino" target="_blank">ESP8266 Arduino documentatie</a></li>
 
 </ul>
 
