--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
 <li>Start de Arduino IDE en ga naar <code>Arduino</code>, <code>Preferences</code> en vul bij <code>Additional Boards Manager URLs</code> dit in: <code>http://arduino.esp8266.com/stable/package_esp8266com_index.json</code></li>
 <li>Ga naar <code>Tools</code>, <code>Board: ..</code>, <code>Boards Manager</code> en zoek hier op 'esp8266'. Installeer de laatste versie (2.2.0).</li>
 <li>Selecteer onder <code>Tools</code>, <code>Board</code>, <code>WeMoS D1 R2 &amp; mini</code></li>
-<li>Nu heb je een aantal libraries nodig. Download de volgende <strong>3</strong> ZIP-files en voeg deze toe aan de Arduino IDE via <code>Sketch</code>, <code>Include library</code>, <code>Add .ZIP Library</code>.
+<li>Nu heb je een aantal libraries nodig. Download de volgende <strong>4</strong> ZIP-files en voeg deze toe aan de Arduino IDE via <code>Sketch</code>, <code>Include library</code>, <code>Add .ZIP Library</code>.
   <ul>
     <li><a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutR0VBdUtuRzNwUmc" target="_blank">FastLED</a></li>
     <li><a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutMVRBYkVvZzJTV0E" target="_blank">LM75</a></li>
     <li><a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutRjY4YUQ5UmN2U1E" target="_blank">OneButton</a></li>
+    <li><a href="https://drive.google.com/uc?export=download&amp;id=0B8pTpNZu7QutUzFGUGlxSVNTTGc" target="_blank">pubsubclient</a></li>
   </ul>
 </li>
 <li>Download de repo <a href="https://github.com/topicusonderwijs/iota/archive/master.zip" target="_blank">hier</a><br/>
