--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ of doe een <code>git clone https://github.com/topicusonderwijs/iota.git</code></
   </ul>
 <strong>Advanced:</strong>
   <ul>
-    <li>MQTT dashboard (evt. <a href="https://github.com/edfungus/Crouton">Crouton</a> gebruiken)</li>
+    <li>MQTT dashboard (evt. <a href="https://github.com/edfungus/Crouton" target="_blank">Crouton</a> gebruiken)</li>
     <li>ESP8266 Webserver</li>
-    <li>Twitter mood ‘ring’ (sentiment analyzer, zie <a href="http://nodered.org/">Node-RED</a> demo)</li>
+    <li>Twitter mood ‘ring’ (sentiment analyzer, zie <a href="http://nodered.org/" target="_blank">Node-RED</a> demo)</li>
     <li>Ga los met IFTTT of Node-RED</li>
   </ul>
 </li>
