documentatie + links in _blank

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <div class="wrapper">
+  <div class="wrapper" style="width: 1000px !important;">
     <header>
       <h1 class="title">Iota</h1>
     </header>
@@ -102,6 +102,12 @@ of doe een <code>git clone https://github.com/topicusonderwijs/iota.git</code></
   
 <li><a href="https://github.com/esp8266/arduino" target="_blank">ESP8266 Arduino documentatie</a></li>
 
+<li><a href="https://github.com/FastLED/FastLED/wiki/Pixel-reference" target="_blank">FastLED documentatie (voor de RGB LEDs)</a></li>
+
+<li><a href="http://www.mathertel.de/Arduino/OneButtonLibrary.aspx" target="_blank">OneButton documentatie (library om de knop multifunctioneel te maken)</a></li>
+
+<li><a href="http://pubsubclient.knolleary.net/api.html" target="_blank">pubsubclient (MQTT client) API documentatie</a></li>
+
 </ul>
 
 <p><strong>Toepassingen</strong></p>
@@ -158,7 +164,9 @@ of doe een <code>git clone https://github.com/topicusonderwijs/iota.git</code></
     <a href="https://github.com/topicusonderwijs/iota/tarball/master" class="tar">tar</a><a href="https://github.com/topicusonderwijs/iota/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
-
+<script>
+$('a').attr({ target: "_blank" });
+</script>
   
 </body>
 </html>
