--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@ of doe een <code>git clone https://github.com/topicusonderwijs/iota.git</code></
 <li>vasthouden: sensorwaarden tonen</li>
 </ul>
 
-<p>Succes!</p>
-
 <p><strong>Documentatie</strong></p>
 
 <ul>
@@ -121,26 +119,31 @@ of doe een <code>git clone https://github.com/topicusonderwijs/iota.git</code></
 <li><a href="https://ifttt.com" target="_blank">IFTTT</a> (If This Then That) is een handige clouddienst die verschillende andere clouddiensten (Twitter, Dropbox, Philips Hue etc.) met elkaar kan verbinden. Via het Maker channel kun je hier ook je IoTa bordje mee koppelen. Zie <a href="https://github.com/topicusonderwijs/iota/tree/master/software/arduino/iota-ifttt">deze sketch</a> voor een voorbeeld.</li>
 
 <li>Een aantal voorbeeldsketches vind je in de IoTa repo onder <code>software/arduino/</code>.</li>
-<li>Mogelijke ideeën om zelf uit te werken:<br/><br/>
-<strong>Basic:</strong>
+</ul>
+<p><strong>Ideeën om zelf uit te werken</strong></p>
+<ul>
+<li><strong>Basic:</strong>
   <ul>
     <li>Temperatuurschaal weergeven in rgb (met vinger verhitten)</li>
     <li>Donker (weinig licht) -> led aan</li>
   </ul>
-<strong>Intermediate:</strong>
+</li>
+<li><strong>Intermediate:</strong>
   <ul>
     <li>Internet enabled button (HTTP/REST/IFTT/MQTT)</li>
     <li>Bij bepaalde sensor waarde mail sturen via IFTTT.com</li>
     <li>Publish sensor waarde via MQTT (zichtbaar via HiveMQ)</li>
     <li>Subscribe via MQTT, status via led of serial (input via client of HiveMQ)</li>
   </ul>
-<strong>Advanced:</strong>
+</li>
+<li><strong>Advanced:</strong>
   <ul>
     <li>MQTT dashboard (evt. <a href="https://github.com/edfungus/Crouton" target="_blank">Crouton</a> gebruiken)</li>
     <li>ESP8266 Webserver</li>
     <li>Twitter mood ‘ring’ (sentiment analyzer, zie <a href="http://nodered.org/" target="_blank">Node-RED</a> demo)</li>
     <li>Ga los met IFTTT of Node-RED</li>
   </ul>
+</li>
 </li>
 </ul>
 
