--- a/index.html
+++ b/index.html
@@ -112,13 +112,15 @@ of doe een <code>git clone https://github.com/topicusonderwijs/iota.git</code></
 
 <ul>
 
+<li>Een aantal voorbeeldsketches vind je in de <a href='https://github.com/topicusonderwijs/iota/tree/master/software/arduino'>IoTa repo</a> onder <code>software/arduino/</code>.
+Hier zijn o.a. sketches te vinden voor het uitlezen/aansturen van de Iota via mqtt, een simpele game en een stemsysteem.
+</li>
+
 <li>In de Arduino IDE vind je onder <code>File</code>, <code>Examples</code> meer voorbeelden van de gebruikte libraries. O.a. <code>ESP8266HTTPClient</code> is handig om simpele HTTP requests te doen. <b>Let op:</b> er momenteel issues zijn met requests via https. Gebruik http indien mogelijk.</li>
 
 <li><a href="https://thingspeak.com/" target="_blank">ThingSpeak</a> biedt een platform om allerlei sensorgegevens te verzamelen en in te zien.</li>
 
 <li><a href="https://ifttt.com" target="_blank">IFTTT</a> (If This Then That) is een handige clouddienst die verschillende andere clouddiensten (Twitter, Dropbox, Philips Hue etc.) met elkaar kan verbinden. Via het Maker channel kun je hier ook je IoTa bordje mee koppelen. Zie <a href="https://github.com/topicusonderwijs/iota/tree/master/software/arduino/iota-ifttt">deze sketch</a> voor een voorbeeld.</li>
-
-<li>Een aantal voorbeeldsketches vind je in de IoTa repo onder <code>software/arduino/</code>.</li>
 </ul>
 <p><strong>Ideeën om zelf uit te werken</strong></p>
 <ul>
